--- a/apputveckling/src/main/webapp/includes/editCase.xhtml
+++ b/apputveckling/src/main/webapp/includes/editCase.xhtml
@@ -39,19 +39,22 @@
             <h:inputText id="caseProfit" value="#{casesBean.caseToEdit.CASE_PROFIT}" class="form-control mb-2" />
             <h:outputLabel for="caseDesc" value="Case Description:" class="d-block font-weight-bold mb-2" />
             <h:inputTextarea id="caseDesc" value="#{casesBean.caseToEdit.CASE_DESC}" rows="5" cols="50" class="form-control mb-2" />
-            <h:outputLabel for="newJournalDesc" value="New Case Journal:" class="d-block font-weight-bold mb-2" />
-            <h:inputTextarea id="newJournalDesc" value="#{casesBean.newJournalDesc}" rows="5" cols="50" class="form-control mb-2" />
             <ui:repeat var="caseJournal" value="#{casesBean.caseToEdit.caseJournals}">
                 <h:outputLabel for="casejournal" value="Case Journal With id #{caseJournal.JOURNAL_ID}:" class="d-block font-weight-bold mb-2" />
                 <h:inputTextarea id="casejournal" value="#{caseJournal.JOURNAL_DESC}" rows="5" cols="50" class="form-control mb-2" />
             </ui:repeat>
-            <h:commandButton value="Add New Journal" action="#{casesBean.addNewCaseJournal()}" class="btn btn-success mb-2" />
             <h:commandButton value="Go Back" class="btn btn-secondary mb-2" action="#{casesBean.goBack()}" />
             <h:commandButton value="Save Changes" action="#{casesBean.updateCase(casesBean.caseToEdit.CASE_ID)}" class="btn btn-primary mb-2"></h:commandButton>
+            <p:commandButton styleClass="add_button m-3" value="Add New Case Journal"
+                             update=":addjournal" oncomplete="PF('addjournal').show()"/>
         </div>
     </h:form>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<p:dialog id="addjournal" widgetVar="addjournal" modal="true" visible="false" header="Add new case journal">
+    <h:form>
+        <p:outputLabel for="newJournalDesc" value="New Case Journal:" class="d-block font-weight-bold mb-2"/>
+        <p:inputTextarea id="newJournalDesc" value="#{casesBean.newJournalDesc}" rows="5" cols="50" class="form-control mb-2"/>
+        <p:commandButton value="Save" action="#{casesBean.addNewCaseJournal()}" class="btn btn-success mb-2"/>
+    </h:form>
+</p:dialog>
 </h:body>
 </html>
