--- a/apputveckling/src/main/webapp/includes/editCase.xhtml
+++ b/apputveckling/src/main/webapp/includes/editCase.xhtml
@@ -16,7 +16,7 @@
     </style>
 </h:head>
 <h:body>
-    <h:form>
+    <h:form id="myform">
         <div class="container mt-4">
             <h2>Case Details</h2>
             <label for="caseId" class="font-weight-bold mb-2"></label>
@@ -44,7 +44,7 @@
                 <h:inputTextarea id="casejournal" value="#{caseJournal.JOURNAL_DESC}" rows="5" cols="50" class="form-control mb-2" />
             </ui:repeat>
             <h:commandButton value="Go Back" class="btn btn-secondary mb-2" action="#{casesBean.goBack()}" />
-            <h:commandButton value="Save Changes" action="#{casesBean.updateCase(casesBean.caseToEdit.CASE_ID)}" class="btn btn-primary mb-2"></h:commandButton>
+            <h:commandButton value="Save Changes" action="#{casesBean.updateCase(casesBean.caseToEdit.CASE_ID)}" class="btn btn-primary mb-2"/>
             <p:commandButton styleClass="add_button m-3" value="Add New Case Journal"
                              update=":addjournal" oncomplete="PF('addjournal').show()"/>
         </div>
