--- a/apputveckling/src/main/webapp/includes/editCase.xhtml
+++ b/apputveckling/src/main/webapp/includes/editCase.xhtml
@@ -43,9 +43,9 @@
                 <h:outputLabel for="casejournal" value="Case Journal With id #{caseJournal.JOURNAL_ID}:" class="d-block font-weight-bold mb-2" />
                 <h:inputTextarea id="casejournal" value="#{caseJournal.JOURNAL_DESC}" rows="5" cols="50" class="form-control mb-2" />
             </ui:repeat>
-            <h:commandButton value="Go Back" class="btn btn-secondary mb-2" action="#{casesBean.goBack()}" />
-            <h:commandButton value="Save Changes" action="#{casesBean.updateCase(casesBean.caseToEdit.CASE_ID)}" class="btn btn-primary mb-2"/>
-            <p:commandButton styleClass="add_button m-3" value="Add New Case Journal"
+            <p:commandButton value="Go Back" styleClass="btn btn-secondary m-2" action="#{casesBean.goBack()}" />
+            <p:commandButton value="Save Changes" styleClass="btn btn-primary m-2" action= "#{casesBean.updateCase(casesBean.caseToEdit.CASE_ID)}"/>
+            <p:commandButton styleClass="btn btn-primary m-2" value="Add New Case Journal"
                              update=":addjournal" oncomplete="PF('addjournal').show()"/>
         </div>
     </h:form>
