--- a/apputveckling/src/main/webapp/includes/editCase.xhtml
+++ b/apputveckling/src/main/webapp/includes/editCase.xhtml
@@ -35,8 +35,9 @@
             </h:selectOneMenu>
             <h:outputLabel for="caseHours" value="Case Hours" class="d-block font-weight-bold mb-2" />
             <h:inputText id="caseHours" value="#{casesBean.caseToEdit.CASE_HOURS}" class="form-control mb-2" />
-            <h:outputLabel for="caseProfit" value="Case Profit" class="d-block font-weight-bold mb-2" />
-            <h:inputText id="caseProfit" value="#{casesBean.caseToEdit.CASE_PROFIT}" class="form-control mb-2" />
+            <p:outputLabel for="caseProfit" value="Case Profit" class="d-block font-weight-bold mb-2" />
+            <p:inputText id="caseProfit" value="#{casesBean.caseToEdit.CASE_PROFIT}" class="form-control mb-2" required="true" />
+            <p:message for="caseProfit" />
             <h:outputLabel for="caseDesc" value="Case Description:" class="d-block font-weight-bold mb-2" />
             <h:inputTextarea id="caseDesc" value="#{casesBean.caseToEdit.CASE_DESC}" rows="5" cols="50" class="form-control mb-2" />
             <ui:repeat var="caseJournal" value="#{casesBean.caseToEdit.caseJournals}">
@@ -44,7 +45,7 @@
                 <h:inputTextarea id="casejournal" value="#{caseJournal.JOURNAL_DESC}" rows="5" cols="50" class="form-control mb-2" />
             </ui:repeat>
             <p:commandButton value="Go Back" styleClass="btn btn-secondary m-2" action="#{casesBean.goBack()}" />
-            <p:commandButton value="Save Changes" styleClass="btn btn-primary m-2" action= "#{casesBean.updateCase(casesBean.caseToEdit.CASE_ID)}"/>
+            <p:commandButton value="Save Changes" styleClass="btn btn-primary m-2" action= "#{casesBean.updateCase(casesBean.caseToEdit.CASE_ID)}" update="caseProfit"/>
             <p:commandButton styleClass="btn btn-primary m-2" value="Add New Case Journal"
                              update=":addjournal" oncomplete="PF('addjournal').show()"/>
         </div>
