ändrade inputText till inputSecret för lösenord

--- a/apputveckling/src/main/webapp/views/LogIn.xhtml
+++ b/apputveckling/src/main/webapp/views/LogIn.xhtml
@@ -34,8 +34,8 @@
             <h:outputLabel for="txtpass">
                 <h:outputText value="Enter Password"> </h:outputText>
             </h:outputLabel>
-            <h:inputText id="txtpass" value="#{signup.password}" styleClass="form-control me-5 "
-                         required="true"> </h:inputText>
+            <h:inputSecret id="txtpass" value="#{signup.password}" styleClass="form-control me-5 "
+                           required="true"> </h:inputSecret>
             <br></br>
 
             <p>Not a member? <a href="SignUp.xhtml">Register</a></p>
