--- a/apputveckling/src/main/webapp/includes/homeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/homeContent.xhtml
@@ -1,6 +1,7 @@
 <!-- Statistics page -->
 
-<div class="container-fluid" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="jakarta.faces.facelets">
+<div class="container-fluid" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="jakarta.faces.facelets"
+     xmlns:f="http://java.sun.com/jsf/core">
     <div class="row">
         <div class="col-md-9 order-md-first">
             <h1>Statistics</h1>
@@ -33,7 +34,10 @@
                 <div class="card-body">
                     <ui:repeat value="#{homeBean.events}" var="appointment">
                         <p class="card-text"><strong>Name: </strong>#{appointment.client_name}</p>
-                        <p class="card-text"><strong>Time: </strong>#{appointment.start_date}</p>
+                        <h:outputText value="Time: " escape="false" styleClass="fw-bold"/>
+                        <h:outputText value="#{appointment.start_date}">
+                            <f:convertDateTime pattern="yyyy-MM-dd HH:mm" />
+                        </h:outputText> <hr/>
                     </ui:repeat>
                 </div>
             </div>
