--- a/apputveckling/src/main/webapp/includes/client_inc/footer.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/footer.xhtml
@@ -9,17 +9,17 @@
 
             <div class="col-md-4">
                 <h4>Follow Us</h4>
-                <p><a href="#" target="_blank">Facebook</a></p>
-                <p><a href="#" target="_blank">Twitter</a></p>
-                <p><a href="#" target="_blank">LinkedIn</a></p>
+                <p><a href="#" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Facebook">Facebook</a></p>
+                <p><a href="#" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Twitter">Twitter</a></p>
+                <p><a href="#" target="_blank" rel="noopener noreferrer" aria-label="Connect with us on LinkedIn">LinkedIn</a></p>
             </div>
 
             <div class="col-md-4">
                 <h4>Quick Links</h4>
-                <p><a href="#">Home</a></p>
-                <p><a href="#">About Us</a></p>
-                <p><a href="#">Services</a></p>
-                <p><a href="#">Contact</a></p>
+                <p><a href="#" aria-label="Home">Home</a></p>
+                <p><a href="#" aria-label="About Us">About Us</a></p>
+                <p><a href="#" aria-label="Services">Services</a></p>
+                <p><a href="#" aria-label="Contact">Contact</a></p>
             </div>
         </div>
     </div>
