--- a/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
@@ -1,38 +1,35 @@
 <nav class="navbar bg-dark text-white fixed-top" xmlns:h="http://java.sun.com/jsf/html">
     <div class="container d-flex justify-content-between align-items-center ">
-        <div class="d-flex">
-            <h:form>
+        <h:form>
+            <div class="d-flex">
                 <h:commandButton value="Hem"
                                  action="#{navigationBean.goToClientHome}"
                                  styleClass="#{navigationBean.selectedSection eq 'home' ? 'nav-link nav-item p-3 myactive':'nav-link nav-item p-3'}"/>
-            </h:form>
-            <h:form>
+
                 <h:commandButton action="#{navigationBean.goToClientProducts}"
                                  styleClass="#{navigationBean.selectedSection eq 'product' ? 'nav-link nav-item p-3 myactive':'nav-link nav-item p-3'}"
                                  value="Produkter"
                 />
-            </h:form>
-            <h:form>
+
                 <h:commandButton action="#{navigationBean.goToClientReserve}"
                                  styleClass="#{navigationBean.selectedSection eq 'Reserve' ? 'nav-link nav-item p-3 myactive':'nav-link nav-item p-3'}"
                                  value="Boka ett möte"
                 />
-            </h:form>
-            <h:form>
+
                 <h:commandButton action="/views/client/clientcase.xhtml"
                                  styleClass="#{navigationBean.selectedSection eq 'Reserve' ? 'nav-link nav-item p-3 myactive':'nav-link nav-item p-3'}"
                                  value="Mina Ärenden"
                 />
-            </h:form>
-        </div>
+            </div>
+        </h:form>
         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavRight"
                 aria-controls="navbarNavRight" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"/>
         </button>
-        <div class="offcanvas offcanvas-end bg-dark " id="navbarNavRight" data-bs-toggle="navbar-toggler" style="margin-top: 72px">
+        <div class="offcanvas offcanvas-end bg-dark " id="navbarNavRight" data-bs-toggle="navbar-toggler"
+             style="margin-top: 72px">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-
                     <a class="nav-link text-white m-2" href="#{request.contextPath}/views/SignUp.xhtml">Bli Medlem</a>
                 </li>
                 <li class="nav-item">
