--- a/apputveckling/src/main/webapp/includes/client_inc/productClient.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/productClient.xhtml
@@ -5,9 +5,11 @@
         <ui:repeat value="#{productBean.products}" var="product">
             <div class="col-md-2 m-3 card" style="width: 300px">
                 <img src="#{empty product.firstImage ? '/apputveckling-1.0-SNAPSHOT/resources/img/image_error.png' : product.firstImage}"
-                     class="card-img-top" alt="..."/>
+                     class="card-img-top" alt="#{product.PRODUCT_NAME}"/>
+                <div class="card-body">
                 <h4 class="card-title">#{product.PRODUCT_NAME}</h4>
                 <h5 class="card-title">Price: #{product.PRODUCT_PRICE} SEK</h5>
+                </div>
                 <h:form>
                     <h:commandButton styleClass="card-footer" value="Läs mer..." action="#{productBean.showProductDetails(product.PRODUCT_ID)}"/>
                 </h:form>
