--- a/apputveckling/src/main/webapp/views/SignUp.xhtml
+++ b/apputveckling/src/main/webapp/views/SignUp.xhtml
@@ -28,32 +28,32 @@
       <h:form styleClass="border p-5">
 
          <h:outputLabel for="txtName">
-            <h:outputText value="Enter Name"> </h:outputText>
+            <h:outputText value="Användarnamn"> </h:outputText>
          </h:outputLabel>
          <h:inputText id="txtName" value="#{signup.name}" styleClass="form-control mb-2 me-5 " required="true"> </h:inputText>
 
          <h:outputLabel for="txtpass">
-            <h:outputText value="Enter Password"> </h:outputText>
+            <h:outputText value="Lösenord"> </h:outputText>
          </h:outputLabel>
          <h:inputText id="txtpass" value="#{signup.password}" styleClass="form-control mb-2" required="true"> </h:inputText>
 
          <h:outputLabel for="txtpassagain">
-            <h:outputText value="Enter Password again"> </h:outputText>
+            <h:outputText value="Skriv lösenord igen"> </h:outputText>
          </h:outputLabel>
          <h:inputText id="txtpassagain" value="#{signup.password2}" styleClass="form-control mb-2" required="true"/>
 
          <h:outputLabel for="txtemail">
-            <h:outputText value="Enter Email"> </h:outputText>
+            <h:outputText value="Email"> </h:outputText>
          </h:outputLabel>
          <h:inputText id="txtemail" value="#{signup.email}" styleClass="form-control mb-2" required="true"/>
 
          <h:outputLabel for="txtphone">
-            <h:outputText value="Enter Phonneumber"> </h:outputText>
+            <h:outputText value="Telefonnummer"> </h:outputText>
          </h:outputLabel>
          <h:inputText id="txtphone" value="#{signup.phone}" styleClass="form-control mb-2" required="true"/>
-         <p>Allready a member? <a href="LogIn.xhtml">Sign in</a></p>
+         <p>Redan en medlem <a href="LogIn.xhtml">Logga in</a></p>
 
-         <h:commandButton id="cmdInsert" value="Create account" action="#{signup.add}"/>
+         <h:commandButton id="cmdInsert" value="Skapa konto" action="#{signup.add}"/>
       </h:form>
 
       </div>
