Fixed something in customerInfo.xhtml

--- a/apputveckling/src/main/webapp/includes/customerInfo.xhtml
+++ b/apputveckling/src/main/webapp/includes/customerInfo.xhtml
@@ -48,7 +48,7 @@
             </div>
 
             <div class="col">
-                <p class="card-text"><strong>Appointment Typ: </strong></p>
+                <p class="card-text"><strong>Case Typ: </strong></p>
             </div>
 
             <div class="col">
