Fixed something in editClient.xhtml

--- a/apputveckling/src/main/webapp/includes/editClient.xhtml
+++ b/apputveckling/src/main/webapp/includes/editClient.xhtml
@@ -27,7 +27,7 @@
 
             </h:panelGrid>
 
-            <h:commandButton value="Submit" action="#{clientBean.addClient()}"/>
+            <h:commandButton styleClass="btn btn-primary" value="Submit" action="#{clientBean.addClient()}"/>
         </div>
     </h:form>
 </h:body>
