--- a/apputveckling/src/main/webapp/includes/updateForm.xhtml
+++ b/apputveckling/src/main/webapp/includes/updateForm.xhtml
@@ -3,15 +3,14 @@
      xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core"
      xmlns:ui="http://java.sun.com/jsf/facelets">
     <div class="card">
-        <p class="card-header">Produkt</p>
+        <p class="card-header">Gitarr</p>
         <div class="card-body">
             <h:form enctype="multipart/form-data">
                 <ui:repeat value="#{productBean.productsDetails}" var="item">
                     <div class="row">
                         <div class="col-9 col-first">
                             <h:outputLabel name="Namn" styleClass="form-label">Produktnamn</h:outputLabel><br/>
-                            <h:inputText name="Name" required="true" value="#{item.PRODUCT_NAME}" requiredMessage="hej"
-                                         class="form-control"/>
+                            <h:inputText name="Name" value="#{item.PRODUCT_NAME}" requiredMessage="hej"/>
                             <h:message for="Name" styleClass="text-danger"/>
                         </div>
                         <br/>
@@ -31,7 +30,7 @@
                         <div class="col-9">
                             <h:outputLabel name="Main beskrivning" styleClass="form-label">Huvudbeskrivning</h:outputLabel>
                             <br/>
-                            <h:inputTextarea name="Main beskrivning" rows="5" cols="30" class="form-control" required="true"
+                            <h:inputTextarea name="Main beskrivning" rows="5" cols="30" class="form-control"
                                              value="#{item.PRODUCT_MAIN_DESC}"/>
                         </div>
                     </div>
