Fixat till lite error-meddelanden

--- a/apputveckling/src/main/webapp/includes/addForm.xhtml
+++ b/apputveckling/src/main/webapp/includes/addForm.xhtml
@@ -7,7 +7,7 @@ xmlns:h="http://xmlns.jcp.org/jsf/html">
             <div class="row">
                 <div class="col-9 col-first">
                     <h:outputLabel name="Namn" styleClass="form-label" indicateRequired="true" >Produktnamn  </h:outputLabel><br/>
-                    <h:inputText name="Name" required="true" value="#{productBean.newProduct.PRODUCT_NAME}" requiredMessage="hej" />
+                    <h:inputText name="Name" required="true" value="#{productBean.newProduct.PRODUCT_NAME}" class="form-control" requiredMessage="hej" />
                     <h:message for="Name" styleClass="text-danger" />
                 </div>
                 <br/>
@@ -19,18 +19,18 @@ xmlns:h="http://xmlns.jcp.org/jsf/html">
                 </div>
             </div>
             <div class="row">
-                <div class="col-3 col-first">
-                     <h:outputLabel  name="Modellår" indicateRequired="true" styleClass="form-label">Modellår</h:outputLabel>
-                     <br/>
-                     <h:inputText converter="jakarta.faces.Number"  class="form-control" name="Modellår" required="true" value="#{productBean.newProduct.PRODUCT_YEAR}"/>
-                     <br/>
-                </div>
                     <div class="col-9">
                      <h:outputLabel name="Main beskrivning" indicateRequired="true" styleClass="form-label">Huvudbeskrivning</h:outputLabel>
                     <br/>
                     <h:inputTextarea name="Main beskrivning" class="form-control" required="true" value="#{productBean.newProduct.PRODUCT_MAIN_DESC}"/>
                     <br/>
                     </div>
+                <div class="col-3 col-first">
+                    <h:outputLabel  name="Modellår" indicateRequired="true" styleClass="form-label">Modellår</h:outputLabel>
+                    <br/>
+                    <h:inputText converter="jakarta.faces.Number"  class="form-control" name="Modellår" required="true" value="#{productBean.newProduct.PRODUCT_YEAR}"/>
+                    <br/>
+                </div>
             </div>
             <br/>
             <div class="row">
